--- a/index.html
+++ b/index.html
@@ -18,25 +18,28 @@
 img:not([src]) { opacity: 0 }
 </style>
 </head>
+
 <body app="app" controller="ViewController">
-	<h1 #hash style="color: red" click="click()" +selected="true">{title}</h1>
 
-	<img @src="http://img.naver.net/static/newsstand/up/2014/0715/038.gif" ^selected="rows.length > 0" +active="rows.isActive"/>
+	<main>
+		<h1 #hash style="color: red" click="click()" +selected="true">{title}</h1>
 
-	<h1 repeat="tabs as tab, index" click="startDrag(el)" @style="color: {color}">{title} {tab}</h1>
+		<img @src="http://img.naver.net/static/newsstand/up/2014/0715/038.gif" +item-is-on="true" ^contenteditable="true"/>
 
-	<wux-item #gallery repeat="rows as row" @selected="rows.has(row)" click="selectProduct(row)">
-		<h1>{row}</h1>
-	</wux-item>
+		<h1 id="dkdj-{kd}" @style="color: {red}" id="name" repeat="tabs as tab, index" click="startDrag(el)" @style="color: {color}">{title} {tab}</h1>
 
-	<!--<div template="abcd" with="abc as c">-->
-	<!--</div>-->
+		<wux-item #gallery repeat="rows as row" @selected="rows.has(row)" click="selectProduct(row)">
+			<h1>{row}</h1>
+			<div>></div>
+		</wux-item>
 
-	<div template="hello"></div>
+		<div template="hello" with="account.product as product"></div>
+	</main>
 
-<template id="hello">
-	asdklasjdklasjkdljaksldas
-</template>
+
+	<template id="hello">
+		asdklas{product.abc}jdklasjkdljaksldas
+	</template>
 
 <script>
 	var app = $module("app", ["1px"]);
@@ -44,6 +47,9 @@ img:not([src]) { opacity: 0 }
 		return {
 			init: function() {
 				$rootScope.hello2 = "HELLO2";
+
+				self.name = "asdklfjakljlasdf";
+				self.style = "dskfjakljklfds";
 
 				self.tabs = ["tab1", "tab2", "tab3"];
 				self.rows = ["tab1", "tab2", "tab3"];
