watcher unobserve에서 연관된 observer 전부 제거하도록 수정

--- a/watcher.html
+++ b/watcher.html
@@ -82,6 +82,13 @@
 		}
 
 		$hashmap.get(object).$next = noop;
+		for (var prop in object) {
+			if (object.hasOwnProperty(prop)) {
+				var value = object[prop];
+				$unobserve(value);
+			}
+		}
+
 		$hashmap["delete"](object);
 	}
 
