일단 업데이

--- a/lee/index.html
+++ b/lee/index.html
@@ -52,7 +52,7 @@
 		<div class="insert-file-row" click="showPopover()">
 			<div class="icon"></div>
 			<div class="content">
-				<h1>첨부파일<span>{files.length} 개</span></h1>
+				<h1>첨부파일<span>{files.length} 개</span> {isShowPopover}</h1>
 				<div class="title"></div>
 				<div class="size"></div>
 			</div>
