--- a/old/parse_watch.html
+++ b/old/parse_watch.html
@@ -13,8 +13,8 @@
 </pre>
 
 
-<script src="new/watchtower.js"></script>
-<script src="new/parse.js"></script>
+<script src="../new/watchtower.js"></script>
+<script src="../new/parse.js"></script>
 <script>
 
 
