--- a/old/promise.html
+++ b/old/promise.html
@@ -5,7 +5,7 @@
 	<title></title>
 	<script src="1px.module.js"></script>
 	<!--<script src="1px.core.js"></script>-->
-	<script src="lib/1px.promise.js"></script>
+	<script src="../lib/1px.promise.js"></script>
 </head>
 <body style="white-space: pre">
 
