--- a/old/file_att_css.html
+++ b/old/file_att_css.html
@@ -3,8 +3,8 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="css/infra.css"/>
-	<script src="js/1px.js"></script>
+	<link rel="stylesheet" href="../css/infra.css"/>
+	<script src="../js/1px.js"></script>
 	<style>
 		* {
 			margin: 0;
